ajout de la classe Utilisateur et tests